// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Helpers #RowItemOverflow it returns correctly against snapshot 1`] = `
<Fragment>
  <Popover
    count={2}
    idPrefix="idPrefix"
  >
    <EuiText
      size="xs"
    >
      <EuiFlexGroup
        data-test-subj="overflow-items"
        direction="column"
        gutterSize="none"
      >
        <EuiFlexItem
          key="idPrefix-idPrefix-attrName-item2-0"
        >
          <Memo(OverflowItemComponent)
            dataProvider={
              Object {
                "and": Array [],
                "enabled": true,
                "excluded": false,
                "id": "idPrefix-attrName-item2-0",
                "kqlQuery": "",
                "name": "item2",
                "queryMatch": Object {
                  "displayValue": "item2",
                  "field": "attrName",
                  "operator": ":",
                  "value": "item2",
                },
              }
            }
            field="attrName"
            rowItem="item2"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
      <p
        data-test-subj="popover-additional-overflow"
      >
        <EuiTextColor
          color="subdued"
        >
          1
           
          <FormattedMessage
            defaultMessage="more not shown"
            id="xpack.securitySolution.tables.rowItemHelper.moreDescription"
            values={Object {}}
          />
        </EuiTextColor>
      </p>
    </EuiText>
  </Popover>
</Fragment>
`;

exports[`Table Helpers #getRowItemDraggable it returns correctly against snapshot 1`] = `
<DraggableWrapper
  dataProvider={
    Object {
      "and": Array [],
      "enabled": true,
      "excluded": false,
      "id": "idPrefix-attrName-item1",
      "kqlQuery": "",
      "name": "item1",
      "queryMatch": Object {
        "displayValue": "item1",
        "field": "attrName",
        "operator": ":",
        "value": "item1",
      },
    }
  }
  key="idPrefix-attrName-item1"
  render={[Function]}
/>
`;

exports[`Table Helpers #getRowItemDraggables it returns correctly against snapshot 1`] = `
<DragDropContext
  onDragEnd={[MockFunction]}
>
  <DraggableWrapper
    dataProvider={
      Object {
        "and": Array [],
        "enabled": true,
        "excluded": false,
        "id": "idPrefix-attrName-item1-0",
        "kqlQuery": "",
        "name": "item1",
        "queryMatch": Object {
          "displayValue": "item1",
          "field": "attrName",
          "operator": ":",
          "value": "item1",
        },
      }
    }
    key="idPrefix-attrName-item1-0"
    render={[Function]}
  />
  <DraggableWrapper
    dataProvider={
      Object {
        "and": Array [],
        "enabled": true,
        "excluded": false,
        "id": "idPrefix-attrName-item2-1",
        "kqlQuery": "",
        "name": "item2",
        "queryMatch": Object {
          "displayValue": "item2",
          "field": "attrName",
          "operator": ":",
          "value": "item2",
        },
      }
    }
    key="idPrefix-attrName-item2-1"
    render={[Function]}
  />
  <DraggableWrapper
    dataProvider={
      Object {
        "and": Array [],
        "enabled": true,
        "excluded": false,
        "id": "idPrefix-attrName-item3-2",
        "kqlQuery": "",
        "name": "item3",
        "queryMatch": Object {
          "displayValue": "item3",
          "field": "attrName",
          "operator": ":",
          "value": "item3",
        },
      }
    }
    key="idPrefix-attrName-item3-2"
    render={[Function]}
  />
   
  <Memo(RowItemOverflowComponent)
    attrName="attrName"
    idPrefix="idPrefix"
    maxOverflowItems={5}
    overflowIndexStart={5}
    rowItems={
      Array [
        "item1",
        "item2",
        "item3",
      ]
    }
  />
</DragDropContext>
`;

exports[`Table Helpers OverflowField it returns correctly against snapshot 1`] = `
<span>
  This string is exactly fifty-one chars in length!!
  <EuiToolTip
    content="This string is exactly fifty-one chars in length!!!"
    delay="regular"
    display="inlineBlock"
    position="top"
  >
    <MoreRowItems
      type="boxesHorizontal"
    />
  </EuiToolTip>
</span>
`;
